--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vacq",
+  "name": "hotelbooking",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.ts",
+    "dev": "nodemon --exec ts-node server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,19 +14,22 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.2.0",
     "express-xss-sanitizer": "^1.2.0",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.3"
   },
   "devDependencies": {
-    "@types/node": "^20.12.2"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.2",
+    "ts-node": "^10.9.2"
   }
 }
